# queue

./: Common.hs  Machine.hs  Main.hs  Queue.hs  README.md  queue.cabal
examples/: 1  2  3
