name:                queue
version:             0.1.0.0
synopsis:            Entry into PLT Games December 2012 ("Turing Tarpit")
homepage:            http://www.pltgames.com/competition/2012/12
license:             MIT
license-file:        LICENSE.txt
author:              Lars Hupel
maintainer:          lars.hupel@mytum.de
category:            Language
build-type:          Simple
cabal-version:       >=1.8
executable queue
  main-is:           Main.hs
  build-depends:     base ==4.*, parsec ==3.1.*, cmdargs ==0.10.*
  ghc-options:       -Wall -fno-warn-unused-do-bind
  extensions:        DeriveDataTypeable
