name:                queue
version:             0.1.0.0
synopsis:            Entry into PLT Games December 2012 ("Turing Tarpit")
homepage:            http://www.pltgames.com/competition/2012/12
license:             MIT
license-file:        LICENSE.txt
author:              Lars Hupel
maintainer:          lars.hupel@mytum.de
category:            Language
build-type:          Simple
cabal-version:       >=1.8
executable queue
  main-is:           Main.hs
  build-depends:     base ==4.*, parsec ==3.1.*, cmdargs ==0.10.*, mtl ==2.*, random-fu ==0.2.*, random-extras ==0.19, non-empty ==0.0
  ghc-options:       -W
  extensions:        DeriveDataTypeable GADTs KindSignatures RankNTypes MultiParamTypeClasses FunctionalDependencies

-- vim: expandtab:ts=2:sw=2
